--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -12,12 +12,12 @@ status-website:
   theme: night
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
+  cname: status.tsv.coach
   # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  logoUrl: https://ihlophfjtrooaicntubm.supabase.co/storage/v1/object/public/bucket//path21.png
+  name: TSV.coach Uptime
+  introTitle: TSV.coach Uptime
+  introMessage: This website shows the status of services around tsv.coach, and scheduled maintenance.
   navbar:
     - title: Status
       href: /
