--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -15,14 +15,14 @@ status-website:
   cname: status.tsv.coach
   # baseUrl: /your-repo-name
   logoUrl: https://ihlophfjtrooaicntubm.supabase.co/storage/v1/object/public/bucket//test1.png
-  name: TSV.coach Uptime
+  name: Uptime & Incident Management
   introTitle: TSV.coach Uptime
   introMessage: This website shows the status of services around tsv.coach, and scheduled maintenance.
   navbar:
     - title: Status
       href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
+    - title: TSV.coach
+      href: https://tsv.coach
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
